--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -3,24 +3,36 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 
-# [program:sshd]
+
+[program:runsvdir]
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=runsvdir /runit-services
+
+# [program:syslog]
+# stdout_logfile=/dev/fd/1
+# stdout_logfile_maxbytes=0
+# redirect_stderr=true
+# command=/bin/busybox syslogd -n -O /dev/stdout
+
+
+
+# runsvdir /runit-services
+
+
+# [program:tftpd]
+# stdout_logfile=/dev/fd/1
+# stdout_logfile_maxbytes=0
+# redirect_stderr=true
+# command=/usr/sbin/in.tftpd --foreground --address 0.0.0.0:69 --user tftp --verbose /tftpboot
+
+
+# [program:kea-dhcp4]
 # stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
 # redirect_stderr=true
 # command=/usr/sbin/sshd -D
-
-[program:tftp]
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-command=/in.tftpd
-
-
-[program:kea-dhcp4]
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-command=/usr/sbin/sshd -D
 
 # [program:sshd]
 # command=/usr/sbin/sshd -D
