add dockercompose and tftp-now

--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -4,11 +4,11 @@ logfile=/dev/null
 logfile_maxbytes=0
 
 
-[program:runsvdir]
+[program:tftp-now]
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-command=runsvdir /runit-services
+command=tftp-now serve
 
 # [program:syslog]
 # stdout_logfile=/dev/fd/1
