--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,47 +1,56 @@
 
 FROM alpine:3.21
 
-ENV UID=9069 \
-  GID=9069
+# ENV UID=9069 \
+#   GID=9069
+
+ARG ARCH=amd64
 
 RUN apk update && apk add --no-cache \
+  libc6-compat \
   supervisor \
   openssh \
+  bash \
   kea \
   dnsmasq
+
+#  (default is amd64)
+ENV TFTP_NOW_VERSION=1.0.4
+ENV TFTP_NOW_URL=https://github.com/puhitaku/tftp-now/releases/download/${TFTP_NOW_VERSION}/tftp-now-linux-${ARCH}
+
+# Download and set up the binary
+RUN wget -O  /bin/tftp-now ${TFTP_NOW_URL} && \
+    chmod +x /bin/tftp-now
 
 # VOLUME /tftpboot
 EXPOSE 69/udp 
 # add user tftp
-RUN addgroup -g $GID -S tftp && \
-    adduser --disabled-password --gecos "" --shell /sbin/nologin \
-            --home /home/tftp --no-create-home --ingroup tftp \
-            --uid $UID tftp
+# RUN addgroup -g $GID -S tftp && \
+#     adduser --disabled-password --gecos "" --shell /sbin/nologin \
+#             --home /home/tftp --no-create-home --ingroup tftp \
+#             --uid $UID tftp
 
 # COPY src/forward-stdout  etc/socklog.rules/forward-stdout
 
 # add tftp-hpa
-RUN apk add --no-cache tftp-hpa runit bash tzdata && \
-    mkdir -p /tftpboot \
-        /runit-services/tftpd-hpa \
-        /runit-services/syslogd && \
-    echo -e "#!/bin/sh\nbusybox syslogd -n -O /dev/stdout" > \
-        /runit-services/syslogd/run && \
-    echo -e "#!/bin/sh\n/usr/sbin/in.tftpd --foreground --address 0.0.0.0:69 \
-        --user tftp --port-range 4096:32760 --create --verbose --verbosity 3 --secure /tftpboot" \
-         > /runit-services/tftpd-hpa/run && \
-    chmod +x /runit-services/syslogd/run /runit-services/tftpd-hpa/run && \
-    chmod 777 /tftpboot
+# RUN apk add --no-cache tftp-hpa runit bash tzdata && \
+#     mkdir -p /tftpboot \
+#         /runit-services/tftpd-hpa \
+#         /runit-services/syslogd && \
+#     echo -e "#!/bin/sh\nbusybox syslogd -n -O /dev/stdout" > \
+#         /runit-services/syslogd/run && \
+#     echo -e "#!/bin/sh\n/usr/sbin/in.tftpd --foreground --address 0.0.0.0:69 \
+#         --user tftp --port-range 4096:32760 --create --verbose --verbosity 3 --secure /tftpboot" \
+#          > /runit-services/tftpd-hpa/run && \
+#     chmod +x /runit-services/syslogd/run /runit-services/tftpd-hpa/run && \
+#     chmod 777 /tftpboot
 
 
 
-# create hosts
-# create .rhosts
-# create hosts.quiv
 COPY src/supervisord.conf /etc/supervisord.conf
 # COPY src/tftp-hpa /etc/default/tftp-hpa
 COPY src/dhcpd.conf /etc/dhpd/dhpd.conf
-
+COPY src/dhcpd.conf /dhpd.conf
 USER root
 
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
