--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -10,6 +10,14 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 command=tftp-now serve
 
+# [program:runit]
+# stdout_logfile=/dev/fd/1
+# stdout_logfile_maxbytes=0
+# redirect_stderr=true
+# command=runsvdir /runit-services
+
+
+
 # [program:syslog]
 # stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
@@ -32,8 +40,5 @@ command=tftp-now serve
 # stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
 # redirect_stderr=true
-# command=/usr/sbin/sshd -D
-
-# [program:sshd]
 # command=/usr/sbin/sshd -D
 
