--- a/src/debian/supervisord.conf
+++ b/src/debian/supervisord.conf
@@ -8,19 +8,26 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 command=/bin/busybox syslogd -n -O /dev/fd1
-# command=/bin/busybox syslogd -n -O /dev/stdout
 
-# [program:inetd]
+[program:xinetd]
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=/usr/sbin/xinetd -d -dontfork 
+
+
+# [program:bob]
 # stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
 # redirect_stderr=true
-# command=inetd -d
+# command=echo "hello"
+
 
 
 # [program:tftp-now]
 # stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
-# redirect_stderr=true
+# redirect_stderr=true  
 # command=tftp-now serve
 
 # [program:runit]
