--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -3,38 +3,17 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 
-
-[program:tftp-now]
+[program:syslog]
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-command=tftp-now serve
+command=/bin/busybox syslogd -n -O /dev/fd/1
 
-# [program:runit]
-# stdout_logfile=/dev/fd/1
-# stdout_logfile_maxbytes=0
-# redirect_stderr=true
-# command=runsvdir /runit-services
-
-
-
-# [program:syslog]
-# stdout_logfile=/dev/fd/1
-# stdout_logfile_maxbytes=0
-# redirect_stderr=true
-# command=/bin/busybox syslogd -n -O /dev/stdout
-
-
-
-# runsvdir /runit-services
-
-
-# [program:tftpd]
-# stdout_logfile=/dev/fd/1
-# stdout_logfile_maxbytes=0
-# redirect_stderr=true
-# command=/usr/sbin/in.tftpd --foreground --address 0.0.0.0:69 --user tftp --verbose /tftpboot
-
+[program:xinetd]
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=/usr/sbin/xinetd -d -dontfork 
 
 # [program:kea-dhcp4]
 # stdout_logfile=/dev/fd/1
