--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,17 +2,19 @@ name: ci
 
 on:
   push:
-  
+    branches:
+      - main
+
 jobs:
   docker:
     runs-on: ubuntu-latest
+    environment: ci 
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
